<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/calc_bgr_light"
    android:padding="16dp">

    <TextView
        android:id="@+id/txt_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="end"
        android:textColor="#AEAEAE"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.166"
        tools:text="100500" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/key_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/key_2"
        app:layout_constraintStart_toStartOf="@+id/key_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_dot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_dot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/key_3"
        app:layout_constraintStart_toStartOf="@+id/key_3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_02"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/key_add"
        app:layout_constraintStart_toStartOf="@+id/key_add" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_1"
        app:layout_constraintBottom_toTopOf="@id/key_0"
        app:layout_constraintEnd_toStartOf="@id/key_2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_2"
        app:layout_constraintBottom_toTopOf="@id/key_0"
        app:layout_constraintEnd_toStartOf="@id/key_3"
        app:layout_constraintStart_toEndOf="@id/key_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_3"
        app:layout_constraintBottom_toTopOf="@id/key_dot"
        app:layout_constraintEnd_toStartOf="@id/key_add"
        app:layout_constraintStart_toEndOf="@id/key_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_add"
        app:layout_constraintBottom_toTopOf="@id/key_02"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_4"
        app:layout_constraintBottom_toTopOf="@id/key_1"
        app:layout_constraintEnd_toStartOf="@id/key_5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_5"
        app:layout_constraintBottom_toTopOf="@id/key_2"
        app:layout_constraintEnd_toStartOf="@id/key_6"
        app:layout_constraintStart_toEndOf="@id/key_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_6"
        app:layout_constraintBottom_toTopOf="@id/key_3"
        app:layout_constraintEnd_toStartOf="@id/key_sub"
        app:layout_constraintStart_toEndOf="@id/key_5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_sub"
        app:layout_constraintBottom_toTopOf="@id/key_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_7"
        app:layout_constraintBottom_toTopOf="@id/key_4"
        app:layout_constraintEnd_toStartOf="@id/key_8"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateIds" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_8"
        app:layout_constraintBottom_toTopOf="@id/key_5"
        app:layout_constraintEnd_toStartOf="@id/key_9"
        app:layout_constraintStart_toEndOf="@id/key_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_9"
        app:layout_constraintBottom_toTopOf="@id/key_6"
        app:layout_constraintEnd_toStartOf="@id/key_mul"
        app:layout_constraintStart_toEndOf="@id/key_8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_mul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_mul"
        app:layout_constraintBottom_toTopOf="@id/key_sub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_ac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/key_ac"
        app:layout_constraintBottom_toTopOf="@id/key_7"
        app:layout_constraintEnd_toStartOf="@id/key_pm"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_pm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_pm"
        app:layout_constraintBottom_toTopOf="@id/key_8"
        app:layout_constraintEnd_toStartOf="@id/key_percent"
        app:layout_constraintStart_toEndOf="@id/key_ac" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_percent"
        app:layout_constraintBottom_toTopOf="@id/key_9"
        app:layout_constraintEnd_toStartOf="@id/key_div"
        app:layout_constraintStart_toEndOf="@id/key_pm" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_div"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_div"
        app:layout_constraintBottom_toTopOf="@id/key_mul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_percent" />

    <LinearLayout
        android:id="@+id/theme_container"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>


